		missing echomail areas.
		File attaches to our own points were placed in the node's
		outbound directory instead of the point outbound.
		Files and echomail security flags implemented.
		Echomail rescan will also work with newsgroups.
		Removed some debug logging with files replace.
		Fixed trashing news dupes file when mbfido was called multiple
		times. Improved program locking.

	mbsetup:
		Added setup for the nodes record for security flags.
                Added setup for the ticgroups default security flags.
		Added setup for the mailgroups default security flags.
		Added setup for the tic areas security flags.
		Added setup for the message areas security flags.
		Menu 14, edit files database had the wrong selection prompt.
		Fixed backspace/delete key issue.

	mbmon:
		Fixed backspace/delete key issue.

	mbindex:
		Removed debug logging.


v0.35.03	06-Jul-2002 - 29-Sep-2002

	general:
		Now compiles and installs on HP-PARISC hardware, tested with
		Debian 3.0 on a HP 712/80.

	upgrade:
		After installation restart mbtask.
		Start mbsetup, enter global configuration and exit and save.
		This will setup the new outbound queue path, default is
		/opt/mbse/var/queue.

	common.a:
		Added nodelist override to the nodelist lookup function.
		Added protection against emty rfc headers with only a space.
		Added test for HA archiver.

	mbinet.a:
		If during a connect a newsserver refuses the connection then
		don't close our side of the connection. This is a temporary
		solution, we should disconnect with timeout instead.

	lang:
		Corrected a spelling error in the Dutch language file.

	mbcico:
		Changed IsDoing information.
		Makes use of the node nodelist override settings.
		Fixed a bug that mbcico refused to do internet calls when one
		of the No IBN, No ITN or No IFC flags was set.

	mbout:
		Makes use of the node nodelist override settings.
		The file attach function now adds the file to the queue, by