@@ -33,6 +33,8 @@ v0.35.04	29-Sep-2002
 		Removed some debug logging with files replace.
 		Fixed trashing news dupes file when mbfido was called multiple
 		times. Improved program locking.
+		Netmail received for a zone/net without netmail board will be
+		stored in the badmail area.
 
 	mbsetup:
 		Added setup for the nodes record for security flags.
